1、问题：模型调用—>找不到UserId，->不调用tool 方法：强制调用Tool，入参固定为Auto，tool从上下文拿